# dotext

./: Cargo.toml  README.md
samples/: sample.txt  ~$sample.pptx
src/: doc.rs  docx.rs  lib.rs  odp.rs  ods.rs  odt.rs  pdf.rs  pptx.rs  txt.rs  xlsx.rs
