[package]
name = "dotext"
version = "0.1.1"
authors = ["Robin Syihab <r@nosql.asia>"]
description = "Simple Rust library to extract readable text from specific document format like Word Document (docx). Currently only support several format, other format coming soon."
license = "MIT"
repository = "https://github.com/anvie/dotext"

[dependencies]  
zip = { version = "0.6" }
quick-xml = "0.27.1"
pdf-extract = "0.6.4"
